; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_delete_playlist.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_delete_playlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@MENU_ENVIRON_NONE = common dso_local global i32 0, align 4
@MENU_ENVIRON_RESET_HORIZONTAL_LIST = common dso_local global i32 0, align 4
@RARCH_MENU_CTL_ENVIRONMENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_delete_playlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_delete_playlist(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = call i32* (...) @playlist_get_cached()
  store i32* %14, i32** %12, align 8
  %15 = load i32*, i32** %12, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %31

18:                                               ; preds = %5
  %19 = load i32, i32* @MENU_ENVIRON_NONE, align 4
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i32 %19, i32* %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store i32* null, i32** %21, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = call i8* @playlist_get_conf_path(i32* %22)
  store i8* %23, i8** %7, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @filestream_delete(i8* %24)
  %26 = load i32, i32* @MENU_ENVIRON_RESET_HORIZONTAL_LIST, align 4
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i32 %26, i32* %27, align 8
  %28 = load i32, i32* @RARCH_MENU_CTL_ENVIRONMENT, align 4
  %29 = call i32 @menu_driver_ctl(i32 %28, %struct.TYPE_3__* %13)
  %30 = call i32 @action_cancel_pop_default(i32* null, i32* null, i32 0, i32 0)
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %18, %17
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local i32* @playlist_get_cached(...) #1

declare dso_local i8* @playlist_get_conf_path(i32*) #1

declare dso_local i32 @filestream_delete(i8*) #1

declare dso_local i32 @menu_driver_ctl(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @action_cancel_pop_default(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
